PROD-12-18-19/force-app/main/default/objects/Compliance__c/Compliance__c.object-meta.xml
<CustomObject>
    <label>Compliance</label>
    <nameField>
        <displayFormat>C - {0}</displayFormat>
        <label>Compliance</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compliance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>