PROD-12-18-19/force-app/main/default/objects/Compliance__c/fields/Advisor__c.field-meta.xml
<CustomField>
    <fullName>Advisor__c</fullName>
    <label>Advisor</label>
    <type>TextArea</type>
</CustomField>