PROD-12-18-19/force-app/main/default/objects/Compliance__c/fields/BIM_Primary_Mktg_Rep__c.field-meta.xml
<CustomField>
    <fullName>BIM_Primary_Mktg_Rep__c</fullName>
    <formula>Prospect_Name__r.BIM_Primary_Mktg_Rep__r.FirstName &amp; &quot; &quot; &amp;  Prospect_Name__r.BIM_Primary_Mktg_Rep__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PSG Primary Mktg Rep</label>
    <type>Text</type>
</CustomField>