PROD-12-18-19/force-app/main/default/objects/Compliance__c/fields/Circumstances_of_unsolicited_request__c.field-meta.xml
<CustomField>
    <fullName>Circumstances_of_unsolicited_request__c</fullName>
    <label>Circumstances of unsolicited request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>