PROD-12-18-19/force-app/main/default/objects/Compliance__c/fields/Company_Background_New__c.field-meta.xml
<CustomField>
    <fullName>Company_Background_New__c</fullName>
    <description>Long version of Company Background</description>
    <inlineHelpText>Long version of Company Background</inlineHelpText>
    <label>Company Background</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>