PROD-12-18-19/force-app/main/default/objects/Compliance__c/fields/Compliance_Form_Approved__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Form_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SS: 9/19/19 Created to track if compliance form approved by L&amp;C team or not so end user will get worn for form submission.</description>
    <label>Compliance Form Approved?</label>
    <type>Checkbox</type>
</CustomField>