PROD-12-18-19/force-app/main/default/objects/Compliance__c/fields/Date_of_first_contact_has_past_30_days__c.field-meta.xml
<CustomField>
    <fullName>Date_of_first_contact_has_past_30_days__c</fullName>
    <formula>IF( (TODAY()) -   Prospect_Name__r.Date_of_Initial_Contact__c &gt;= 30 , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>System is calculating base of “Date of Initial Contact” field</inlineHelpText>
    <label>Date of first contact has past 30 days</label>
    <type>Checkbox</type>
</CustomField>