PROD-12-18-19/force-app/main/default/objects/Compliance__c/fields/Date_of_Last_contact_is_within_12_months__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_contact_is_within_12_months__c</fullName>
    <formula>IF( (TODAY()) - Date_of_Last_Activity__c  &lt;= 365 , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>System will calculating value base on  “Date of Last Activity” field</inlineHelpText>
    <label>Date of Last contact is within 12 months</label>
    <type>Checkbox</type>
</CustomField>