PROD-12-18-19/force-app/main/default/objects/Compliance__c/fields/Date_of_Offeree_Signature__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Offeree_Signature__c</fullName>
    <label>Date of Offeree Signature</label>
    <type>Date</type>
</CustomField>