PROD-12-18-19/force-app/main/default/objects/Compliance__c/fields/Investment_Exp_with_Public_Securities__c.field-meta.xml
<CustomField>
    <fullName>Investment_Exp_with_Public_Securities__c</fullName>
    <label>Investment Exp with Public Securities</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Novice</fullName>
            </value>
            <value>
                <fullName>Some Experience</fullName>
            </value>
            <value>
                <fullName>Experienced</fullName>
            </value>
            <value>
                <fullName>Highly Experienced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>