PROD-12-18-19/force-app/main/default/objects/Compliance__c/fields/Legal_Structure_of_Offeree__c.field-meta.xml
<CustomField>
    <fullName>Legal_Structure_of_Offeree__c</fullName>
    <label>Legal Structure of Offeree</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Public Coporation</fullName>
            </value>
            <value>
                <fullName>Private Corporation</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
            <value>
                <fullName>Government Entity</fullName>
            </value>
            <value>
                <fullName>Foundation</fullName>
            </value>
            <value>
                <fullName>Endowment</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>IRA</fullName>
            </value>
            <value>
                <fullName>Taft Hartley</fullName>
            </value>
            <value>
                <fullName>University</fullName>
            </value>
            <value>
                <fullName>Fund</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>