PROD-12-18-19/force-app/main/default/objects/Compliance__c/fields/Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address__c</fullName>
    <formula>Prospect_Name__r.BillingStreet &amp;  BR() &amp;  Prospect_Name__r.BillingCity &amp;  BR() &amp;  Prospect_Name__r.BillingState &amp;  BR() &amp;  Prospect_Name__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Address</label>
    <type>Text</type>
</CustomField>