PROD-12-18-19/force-app/main/default/objects/Compliance__c/fields/Main_Phone__c.field-meta.xml
<CustomField>
    <fullName>Main_Phone__c</fullName>
    <formula>Prospect_Name__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Main Phone</label>
    <type>Text</type>
</CustomField>