PROD-12-18-19/force-app/main/default/objects/Compliance__c/fields/Manager_s1__c.field-meta.xml
<CustomField>
    <fullName>Manager_s1__c</fullName>
    <label>Manager(s)</label>
    <type>TextArea</type>
</CustomField>