PROD-12-18-19/force-app/main/default/objects/Compliance__c/fields/Managers_for_alternative_investments__c.field-meta.xml
<CustomField>
    <fullName>Managers_for_alternative_investments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Managers for alternative investments?</label>
    <type>Checkbox</type>
</CustomField>