PROD-12-18-19/force-app/main/default/objects/Compliance__c/fields/My_KYC_PFG__c.field-meta.xml
<CustomField>
    <fullName>My_KYC_PFG__c</fullName>
    <formula>CRM_Primary__r.Id  = $User.Id ||  CRM_Secondary__r.Id = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My KYC - PFG</label>
    <type>Checkbox</type>
</CustomField>