PROD-12-18-19/force-app/main/default/objects/Compliance__c/fields/Other_Subscriber_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Subscriber_Type__c</fullName>
    <inlineHelpText>Populate when Other is selected in the Subscriber Type field.</inlineHelpText>
    <label>Other Subscriber Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>