PROD-12-18-19/force-app/main/default/objects/Compliance__c/fields/PFG_Investment_Candidate__c.field-meta.xml
<CustomField>
    <fullName>PFG_Investment_Candidate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PFG Investment Candidate?</label>
    <type>Checkbox</type>
</CustomField>