PROD-12-18-19/force-app/main/default/objects/Compliance__c/fields/Pre_Existing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Pre_Existing_Contact__c</fullName>
    <label>Pre-Existing Contact?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>