PROD-12-18-19/force-app/main/default/objects/Compliance__c/fields/Prior_in_person_meeting_with_Offeree__c.field-meta.xml
<CustomField>
    <fullName>Prior_in_person_meeting_with_Offeree__c</fullName>
    <label>Prior in-person meeting with Offeree?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>