PROD-12-18-19/force-app/main/default/objects/Compliance__c/fields/Prospect_Name__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Name__c</fullName>
    <label>Prospect Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Compliance</relationshipLabel>
    <relationshipName>KYC_Forms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>