PROD-12-18-19/force-app/main/default/objects/Compliance__c/fields/Public_Private__c.field-meta.xml
<CustomField>
    <fullName>Public_Private__c</fullName>
    <label>Public/Private?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>