PROD-12-18-19/force-app/main/default/objects/Compliance__c/fields/Qualified_Date__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Date__c</fullName>
    <label>Qualified Date</label>
    <type>Date</type>
</CustomField>