PROD-12-18-19/force-app/main/default/objects/Compliance__c/fields/Risk_Tolerant__c.field-meta.xml
<CustomField>
    <fullName>Risk_Tolerant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Risk Tolerant?</label>
    <type>Checkbox</type>
</CustomField>