PROD-12-18-19/force-app/main/default/objects/Compliance__c/fields/Signed_off_by_CRM__c.field-meta.xml
<CustomField>
    <fullName>Signed_off_by_CRM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To indicate that the CRM has reviewed the data in the KYC form and certifies that the information is correct to the best of their knowledge.</description>
    <inlineHelpText>To indicate that the CRM has reviewed the data in the KYC form and certifies that the information is correct to the best of their knowledge.</inlineHelpText>
    <label>Signed off by CRM</label>
    <type>Checkbox</type>
</CustomField>